<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">LiveMatches</string>
    <string name="live" translatable="false">Live</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="home_team" translatable="false">Home Team</string>
    <string name="away_team" translatable="false">Away Team</string>
    <string name="no_internet" translatable="false">No internet connection available.</string>
    <string name="search" translatable="false">search</string>
    <string name="formation" translatable="false">Formation</string>
    <string name="_3_9" translatable="false">3.9</string>
    <string name="_4_2_3_1" translatable="false">4-2-3-1</string>
    <string name="diaa" translatable="false">diaa</string>
    <string name="_7" translatable="false">7</string>
    <string name="f" translatable="false">F</string>
    <string name="one" translatable="false">1</string>
    <string name="goals_scored" translatable="false">Goals Scored</string>
    <string name="minutesplay" translatable="false">MinutesPlay</string>
    <string name="_99" translatable="false">99</string>
    <string name="club" translatable="false">Club</string>
    <string name="pt" translatable="false">Pt</string>
    <string name="ga" tools:ignore="MissingTranslation">GA</string>
    <string name="gf" tools:ignore="MissingTranslation">GF</string>
    <string name="l" tools:ignore="MissingTranslation">L</string>
    <string name="d" tools:ignore="MissingTranslation">D</string>
    <string name="w" tools:ignore="MissingTranslation">W</string>
    <string name="empity" tools:ignore="MissingTranslation">empity</string>
    <string name="aston_villa" translatable="false">Aston Villa</string>
    <string name="manchester_united" translatable="false">Manchester United</string>
    <string name="mp" tools:ignore="MissingTranslation">MP</string>
    <string name="premier_league" tools:ignore="MissingTranslation">Premier League</string>
    <string name="la_liga" tools:ignore="MissingTranslation">La Liga</string>
    <string name="matches" tools:ignore="MissingTranslation">Matches</string>
    <string name="koralive" tools:ignore="MissingTranslation">KoraLive</string>
    <string name="egypit_league" tools:ignore="MissingTranslation">Egypit League</string>
    <string name="home" tools:ignore="MissingTranslation">Home</string>
</resources>