<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/logoal_hilalhome"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/clipart194678"
                app:layout_constraintEnd_toEndOf="@+id/textView"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tHome_Team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:lines="2"
                android:maxLines="2"
                android:singleLine="false"
                android:text="Olympique de Marseille"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/logoal_hilalhome"
                app:layout_constraintStart_toStartOf="@+id/logoal_hilalhome"
                app:layout_constraintTop_toBottomOf="@+id/logoal_hilalhome" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/logoal_hilal"
                app:layout_constraintStart_toEndOf="@+id/logoal_hilalhome"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.385" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/live32"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/backgroundlive"
                android:gravity="center"
                android:text="@string/live"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/logoal_hilal"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toEndOf="@+id/logoal_hilalhome"
                app:layout_constraintTop_toBottomOf="@+id/time" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/leagname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/home_team"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/leagname" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/logoal_hilal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/clipart194678"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tAway_Team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:lines="2"
                android:maxLines="2"
                android:singleLine="false"
                android:text="Manchester \n United"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/logoal_hilal"
                app:layout_constraintStart_toStartOf="@+id/logoal_hilal"
                app:layout_constraintTop_toBottomOf="@+id/logoal_hilal" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:text="@string/away_team"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/leagname" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tHome_Score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:text="0"
                android:textSize="30dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tHome_Team"
                app:layout_constraintStart_toStartOf="@+id/tHome_Team"
                app:layout_constraintTop_toBottomOf="@+id/tHome_Team" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tAway_Score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="1"
                android:textSize="30dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tAway_Team"
                app:layout_constraintStart_toStartOf="@+id/tAway_Team"
                app:layout_constraintTop_toBottomOf="@+id/tAway_Team" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>